--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li>Website maintenance and support</li>
           <li>Website hosting</li>
         </ul>
-        <p>Take a look at our <a href="/pricing">pricing page</a> for subscription information.</p>
+        <p>Take a look at our <a href="pricing.html">pricing page</a> for subscription information.</p>
       </div>
       <div class="col-md-6">
         <h2>Contact Us</h2>
