--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="pricing.html">Our Prices</a>
         </li>
       </ul>
     </div>
