--- a/index7.html
+++ b/index7.html
@@ -6,7 +6,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- Custom CSS -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <style>
     body {
@@ -42,7 +42,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index7.html">Mad Brothers Bakery</a>
+    <a class="navbar-brand" href="#">Mad Brothers Bakery</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -68,20 +68,6 @@
     </div>
   </div>
 
-	<section id="about-us" class="py-5">
-	  <div class="container">
-	    <div class="row">
-	      <div class="col-md-6">
-	        <h2>About Us</h2>
-	        <p>We are a family-owned bakery, our passion for baking and commitment to using only the freshest ingredients have made us a favorite among the local community.</p>
-	        <p>At Mad Brothers Bakery, we believe that every treat should be a special experience. That's why we take the time to carefully craft each recipe, from our signature cupcakes to our artisanal breads.</p>
-	      </div>
-	      <div class="col-md-6">
-	        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-xJV1yoFIr75lJg5BFDcWJpAlX3brv1a7Fw&usqp=CAU" alt="About Us" class="img-fluid rounded-circle">
-	      </div>
-	    </div>
-	  </div>
-	</section>
 
 
 <!--
@@ -113,6 +99,7 @@
  <!-- Bootstrap JS and jQuery -->
 
  <!-- Contact Section -->
+ <!-- Contact Section -->
  <section id="contact" class="section">
  	<div class="container">
  		<h2>Contact Us</h2>
@@ -132,10 +119,10 @@
  <footer>
  	<div class="container">
  		<p>&copy; 2023 Mad Brothers Bakery. All rights reserved.</p>
- 		<ul class="list-inline">			
-	      <li><a href="https://www.tiktok.com/@madbrothersbakery"><i class="fab fa-tiktok"></i><span> Follow us on tiktok</span></a></li>
-	      <li><a href="https://www.instagram.com/madbrothers.bakery/?utm_source=ig_embed&ig_rid=be6a29c1-694b-46f5-bddb-ff8814f47792&ig_mid=967072D4-B789-47E9-B4C3-08FFF81965F5"><i class="fa fa-instagram"></i><span> Follow us on instagram</span></a></li>
-</ul>
+ 		<ul class="list-inline">
+      <li><a href="https://www.tiktok.com/@madbrothersbakery"><i class="fab fa-tiktok"></i><span> Follow us on tiktok</span></a></li>
+      <li><a href="https://www.instagram.com/madbrothers.bakery/?utm_source=ig_embed&ig_rid=be6a29c1-694b-46f5-bddb-ff8814f47792&ig_mid=967072D4-B789-47E9-B4C3-08FFF81965F5"><i class="fa fa-instagram"></i><span> Follow us on instagram</span></a></li>
+ </ul>
  </div>
  </footer>
 
