about.html opening hours

--- a/about.html
+++ b/about.html
@@ -126,13 +126,18 @@
  			</div>
  		</div>
  	</div>
+  <div class="col-md-6">
+    <h2>Hours of Operation</h2>
+    <p>Monday - Friday: 7am - 10pm</p>
+    <p>Saturday - Sunday: 9am - 6pm</p>
+</div>
  </section>
  <!-- Footer -->
 
  <footer>
  	<div class="container">
  		<p>&copy; 2023 Mad Brothers Bakery. All rights reserved.</p>
- 		<ul class="list-inline">			
+ 		<ul class="list-inline">
 	      <li><a href="https://www.tiktok.com/@madbrothersbakery"><i class="fab fa-tiktok"></i><span> Follow us on tiktok</span></a></li>
 	      <li><a href="https://www.instagram.com/madbrothers.bakery/?utm_source=ig_embed&ig_rid=be6a29c1-694b-46f5-bddb-ff8814f47792&ig_mid=967072D4-B789-47E9-B4C3-08FFF81965F5"><i class="fa fa-instagram"></i><span> Follow us on instagram</span></a></li>
 </ul>
