added opening hours html to each page

--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
   <!-- Custom CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+
   <style>
     body {
       background-color: #f2f2f2;
@@ -68,21 +70,6 @@
     </div>
   </div>
 
-	<section id="about-us" class="py-5">
-	  <div class="container">
-	    <div class="row">
-	      <div class="col-md-6">
-	        <h2>About Us</h2>
-	        <p>We are a family-owned bakery, our passion for baking and commitment to using only the freshest ingredients have made us a favorite among the local community.</p>
-	        <p>At Mad Brothers Bakery, we believe that every treat should be a special experience. That's why we take the time to carefully craft each recipe, from our signature cupcakes to our artisanal breads.</p>
-	      </div>
-	      <div class="col-md-6">
-	        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-xJV1yoFIr75lJg5BFDcWJpAlX3brv1a7Fw&usqp=CAU" alt="About Us" class="img-fluid rounded-circle">
-	      </div>
-	    </div>
-	  </div>
-	</section>
-
 
 <!--
   <div class="container">
@@ -113,26 +100,39 @@
  <!-- Bootstrap JS and jQuery -->
 
  <!-- Contact Section -->
- <section id="contact" class="section">
+
+ <section id="about-us" class="py-5">
  	<div class="container">
- 		<h2>Contact Us</h2>
  		<div class="row">
- 			<div class="col-sm-6">
- 				<p>Feel free to reach out to us with any questions or feedback.</p>
- 				<p><i class="fa fa-phone"></i> (123) 456-7890</p>
- 				<p><i class="fa fa-envelope"></i> MadBrothersDublin@gmail.com</p>
- 				<p><i class="fa fa-map-marker"></i> 17 Nephin Rd, Ashtown, Dublin, D07 N8K7
-</p>
+ 			<div class="col-md-6">
+        <h2>About Us</h2>
+        <p>We are a family-owned bakery, our passion for baking and commitment to using only the freshest ingredients have made us a favorite among the local community.</p>
+        <p>At Mad Brothers Bakery, we believe that every treat should be a special experience. That's why we take the time to carefully craft each recipe, from our signature cupcakes to our artisanal breads.</p>
  			</div>
+        <div class="col-md-6">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-xJV1yoFIr75lJg5BFDcWJpAlX3brv1a7Fw&usqp=CAU" alt="About Us" class="img-fluid rounded-circle">
+    </div>
  		</div>
  	</div>
-  <div class="col-md-6">
-    <h2>Hours of Operation</h2>
-    <p>Monday - Friday: 7am - 10pm</p>
-    <p>Saturday - Sunday: 9am - 6pm</p>
-</div>
  </section>
- <!-- Footer -->
+
+ <section id="contact-us" class="py-5">
+   <div class="container">
+     <div class="row">
+       <div class="col-md-6">
+         <h2>Contact Us</h2>
+         <p>Feel free to reach out to us with any questions or feedback.</p>
+         <p><i class="fa fa-phone"></i> (123) 456-7890</p>
+         <p><i class="fa fa-envelope"></i> MadBrothersDublin@gmail.com</p>
+         <p><i class="fa fa-map-marker"></i> 17 Nephin Rd, Ashtown, Dublin, D07 N8K7 </p>
+          </div>
+       <div class="col-md-6">
+         <h2>Hours of Operation</h2>
+         <p>Monday - Friday: 7am - 10pm</p>
+         <p>Saturday - Sunday: 9am - 6pm</p>       </div>
+     </div>
+   </div>
+ </section>
 
  <footer>
  	<div class="container">
