--- a/menu.html
+++ b/menu.html
@@ -57,6 +57,9 @@ vertical-align: middle;
     .card-text {
       font-size: 0.9rem;
     }
+    .container {
+      align-items: bottom;
+    }
   </style>
 </head>
 <body>
@@ -181,29 +184,32 @@ vertical-align: middle;
 -->
 
  <!-- Contact Section -->
- <section id="contact" class="section">
- 	<div class="container">
- 		<h2>Contact Us</h2>
- 		<div class="row">
- 			<div class="col-sm-6">
- 				<p>Feel free to reach out to us with any questions or feedback.</p>
- 				<p><i class="fa fa-phone"></i> (123) 456-7890</p>
- 				<p><i class="fa fa-envelope"></i> MadBrothersDublin@gmail.com</p>
- 				<p><i class="fa fa-map-marker"></i> 17 Nephin Rd, Ashtown, Dublin, D07 N8K7
-</p>
- 			</div>
- 		</div>
- 	</div>
+
+ <section id="contact-us" class="py-5">
+   <div class="container">
+     <div class="row">
+       <div class="col-md-6">
+         <h2>Contact Us</h2>
+         <p>Feel free to reach out to us with any questions or feedback.</p>
+         <p><i class="fa fa-phone"></i> (123) 456-7890</p>
+         <p><i class="fa fa-envelope"></i> MadBrothersDublin@gmail.com</p>
+         <p><i class="fa fa-map-marker"></i> 17 Nephin Rd, Ashtown, Dublin, D07 N8K7 </p>
+          </div>
+       <div class="col-md-6">
+         <h2>Hours of Operation</h2>
+         <p>Monday - Friday: 7am - 10pm</p>
+         <p>Saturday - Sunday: 9am - 6pm</p>       </div>
+     </div>
+   </div>
  </section>
- <!-- Footer -->
 
  <footer>
  	<div class="container">
  		<p>&copy; 2023 Mad Brothers Bakery. All rights reserved.</p>
  		<ul class="list-inline">
-        <li><a href="https://www.tiktok.com/@madbrothersbakery"><i class="fab fa-tiktok"></i><span>Follow us on tiktok</span></a></li>
-        <li><a href="https://www.instagram.com/madbrothers.bakery/?utm_source=ig_embed&ig_rid=be6a29c1-694b-46f5-bddb-ff8814f47792&ig_mid=967072D4-B789-47E9-B4C3-08FFF81965F5"><i class="fa fa-instagram"></i><span> Follow us on instagram</span></a></li>
- </ul>
+	      <li><a href="https://www.tiktok.com/@madbrothersbakery"><i class="fab fa-tiktok"></i><span>Follow us on tiktok</span></a></li>
+	      <li><a href="https://www.instagram.com/madbrothers.bakery/?utm_source=ig_embed&ig_rid=be6a29c1-694b-46f5-bddb-ff8814f47792&ig_mid=967072D4-B789-47E9-B4C3-08FFF81965F5"><i class="fa fa-instagram"></i><span> Follow us on instagram</span></a></li>
+</ul>
  </div>
  </footer>
 
