--- a/about.html
+++ b/about.html
@@ -43,6 +43,11 @@
     .card-text {
       font-size: 0.9rem;
     }
+	 .navbar-image {
+  margin-right: 20px;
+  margin-left: -60px;
+} 
+	 
   </style>
 </head>
 <body>
