--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
       line-height: 50px;
     }
 
+    .navbar-image {
+  margin-right: 20px;
+  margin-left: -60px;
+}
   </style>
 </head>
 <body>
