--- a/menu.html
+++ b/menu.html
@@ -65,6 +65,11 @@ vertical-align: middle;
       align-items: bottom;
     }
 
+	  .navbar-image {
+  margin-right: 20px;
+  margin-left: -60px;
+}
+	  
   </style>
 </head>
 <body>
