added whatsapp link

--- a/index.html
+++ b/index.html
@@ -104,21 +104,21 @@
     </div>
   </div>
 
-
-
-<!--
   <div class="container">
     <div class="row">
       <div class="col-md-4">
         <div class="card">
           <img src="https://images.unsplash.com/photo-1529104962253-56ba3b3b2d7b" class="card-img-top" alt="Cafe 1">
           <div class="card-body">
-            <h5 class="card-title">Cafe 1</h5>
+            <h5 class="card-title">Why not place an order on our Whatsapp?</h5>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit quam, sit amet interdum velit faucibus eget.</p>
-            <a href="#" class="btn btn-primary">Learn More</a>
+            <a href="https://wa.me/353866022191" class="btn btn-primary">Place Order</a>
+            <a href="https://wa.me/353866022191?text=Hi%2C%20I'd%20like%20to%20place%20an%20order." class="btn btn-primary">Place Order</a>
+
           </div>
         </div>
       </div>
+      <!--
       <div class="col-md-4">
         <div class="card">
       <img src="https://images.unsplash.com/photo-1580519543131-5b34a6d467bf" class="card-img-top" alt="Cafe 3">
