added whatsapp call/text

--- a/index.html
+++ b/index.html
@@ -60,11 +60,15 @@
   margin-right: 20px;
   margin-left: -60px;
 }
+
+.btn-primary:hover {
+background-color: #25D366;
+}
   </style>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <div class="navbar-image">
         <img src="favico-square.png" width="45" lenght="45">
@@ -103,7 +107,7 @@
       <p>Cabra cafe </p>
     </div>
   </div>
-
+<!--
   <div class="container">
     <div class="row">
       <div class="col-md-4">
@@ -112,12 +116,41 @@
           <div class="card-body">
             <h5 class="card-title">Why not place an order on our Whatsapp?</h5>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit quam, sit amet interdum velit faucibus eget.</p>
-            <a href="https://wa.me/353866022191" class="btn btn-primary">Place Order</a>
             <a href="https://wa.me/353866022191?text=Hi%2C%20I'd%20like%20to%20place%20an%20order." class="btn btn-primary">Place Order</a>
-
           </div>
         </div>
       </div>
+    </div>
+    </div>
+-->
+<div class="container">
+  <h2>Place an Order</h2>
+  <div class="row">
+    <div class="col-md-6">
+      <div class='card'>
+        <img src="images/whatsapp.jpg" class="card-img-top" alt="whatsapp logo">
+        <div class="card-body">
+          <h5 class="card-title">Place an order on our Whatsapp?</h5>
+          <p class="card-text"> Call or send us a chat detailing your order.  <br> We can't wait to hear from you!</p>
+          <a href="tel:+353866022191" class="btn btn-primary">Call Us on WhatsApp</a>
+          <a href="https://wa.me/353866022191?text=Hi%2C%20I'd%20like%20to%20place%20an%20order." class="btn btn-primary">Whatsapp Chat</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class='card'>
+        <img src="images/cafe.jpg" class="card-img-top" alt="whatsapp logo">
+        <div class="card-body">
+          <h5 class="card-title">Or call or text us in store</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit quam, sit amet interdum velit faucibus eget.</p>
+          <a href="https://wa.me/353866022191?text=Hi%2C%20I'd%20like%20to%20place%20an%20order." class="btn btn-primary">0834571723</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
       <!--
       <div class="col-md-4">
         <div class="card">
