added whatsapp call/text

--- a/index.html
+++ b/index.html
@@ -132,7 +132,6 @@ background-color: #25D366;
         <div class="card-body">
           <h5 class="card-title">Place an order on our Whatsapp?</h5>
           <p class="card-text"> Call or send us a chat detailing your order.  <br> We can't wait to hear from you!</p>
-          <a href="tel:+353866022191" class="btn btn-primary">Call Us on WhatsApp</a>
           <a href="https://wa.me/353866022191?text=Hi%2C%20I'd%20like%20to%20place%20an%20order." class="btn btn-primary">Whatsapp Chat</a>
         </div>
       </div>
@@ -143,7 +142,7 @@ background-color: #25D366;
         <div class="card-body">
           <h5 class="card-title">Or call or text us in store</h5>
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor suscipit quam, sit amet interdum velit faucibus eget.</p>
-          <a href="https://wa.me/353866022191?text=Hi%2C%20I'd%20like%20to%20place%20an%20order." class="btn btn-primary">0834571723</a>
+          <a href="tel:+353866022191" class="btn btn-primary">Call Us</a>
         </div>
       </div>
     </div>
